| Bug #4352 | nested joins printed incorrectly | ||
|---|---|---|---|
| Submitted: | 30 Jun 2004 22:08 | Modified: | 6 Jul 2004 8:27 |
| Reporter: | Oleksandr Byelkin | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S1 (Critical) |
| Version: | 5.0 | OS: | Any (all) |
| Assigned to: | Oleksandr Byelkin | CPU Architecture: | Any |
[1 Jul 2004 22:47]
Oleksandr Byelkin
ChangeSet 1.1689 04/07/01 23:46:43 bell@sanja.is.com.ua +5 -0 fixed join_nested test independence of environment spaces at line end in fresh definitions removed fixed printing of nested joins (BUG#4352)
[6 Jul 2004 8:27]
Oleksandr Byelkin
pushed

Description: nested joins prints incorrectly (which is critical for VIEW implementation) How to repeat: Apply following patch to mysql-test/t/join_nested.test: ------------------------------------------------------------------------ ===== mysql-test/t/join_nested.test 1.1 vs edited ===== --- 1.1/mysql-test/t/join_nested.test Fri Jun 11 08:26:37 2004 +++ edited/mysql-test/t/join_nested.test Wed Jun 30 22:23:50 2004 @@ -49,7 +49,7 @@ (t3, t4) ON t3.a=1 AND t2.b=t4.b; -EXPLAIN +EXPLAIN EXTENDED SELECT t2.a,t2.b,t3.a,t3.b,t4.a,t4.b FROM t2 LEFT JOIN ------------------------------------------------------------------------ we get incorrect syntax in ./mysql-test-run join_nested output: ************** *** 86,91 **** --- 86,93 ---- 1 SIMPLE t2 ALL NULL NULL NULL NULL 3 1 SIMPLE t3 ALL NULL NULL NULL NULL 2 Using where 1 SIMPLE t4 ALL NULL NULL NULL NULL 2 + Warnings: + Note 1003 select test.t2.a AS `a`,test.t2.b AS `b`,test.t3.a AS `a`,test.t3.b AS `b`,test.t4.a AS `a`,test.t4.b AS `b` from test.t2 join ( join test.t3 join test.t4) on((test.t2.b = test.t4.b)) where ((test.t3.a = 1) or isnull(test.t3.c)) SELECT t2.a,t2.b,t3.a,t3.b,t4.a,t4.b FROM t2 LEFT JOIN