fixed join_nested test independence of environment spaces at line end in fresh definitions removed fixed printing of nested joins (BUG#4352)